# intentio

./: .gitignore  pyproject.toml
artifacts/acceptance/: metrics.json
artifacts/canary/: canary_plan.jsonl  canary_sample.jsonl
artifacts/canary/exec/: effects.jsonl  human_signoff.json  rollback_plan.jsonl  summary.json
artifacts/canary/rollback/: rollback_effects.jsonl
artifacts/gate/: promotion.json
artifacts/release/: release.json
artifacts/runs/20251006-171940/: manifest.json
artifacts/runs/20251006-171940/files/: plan_trace.jsonl
artifacts/runs/20251006-172130/: manifest.json
artifacts/runs/20251006-172130/files/: metrics.json
artifacts/runs/20251006-173035/: manifest.json
artifacts/runs/20251006-173035/files/: metrics.json
artifacts/runs/20251006-173316/: manifest.json
artifacts/runs/20251006-173316/files/: intent.snapshot.yaml
data/: tickets_eval.jsonl  tickets_train.jsonl
intent/: intent.schema.json
intent/examples/: intent.support-triage.yaml
scripts/: e2e_smoke.ps1  e2e_smoke.sh
src/idc/: acceptance.py  actions.py  agent_iface.py  agent_llm.py  audit.py  canary.py  cli.py  contract.py  execution.py  gate.py  hgate.py  llm.py  policy.py  sandbox.py  signoff.py  tools.py
